--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,10 @@
 @using Microsoft.JSInterop
 @using Tickets
 @using Tickets.Shared
+
+@using Tickets.BLL
+@using Tickets.Models
+@using Tickets.Extensors
+
+@using Radzen
+@using Radzen.Blazor
