--- a/Pages/Registros/R_Tickets.razor
+++ b/Pages/Registros/R_Tickets.razor
@@ -1,5 +1,5 @@
-﻿@page "/Sistemas"
-@page "/Sistemas/{TicketId:int}"
+﻿@page "/Tickets"
+@page "/Tickets/{TicketId:int}"
 @inject TicketsBLL TicketsBLL
 @inject NotificationService notificationService
 
