--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -2,8 +2,12 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Aplicada 1.</h1>
 
-Welcome to your new app.
+<h2>Luis Miguel Jerez Caceres</h2> 
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h2>2019-0728</h2>
+
+
+
+
