--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -11,12 +11,17 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span> Aplicada
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Tickets">
                 <span class="oi oi-plus" aria-hidden="true"></span> Registro Tickets
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ConsultaTickets">
+                <span class="oi oi-plus" aria-hidden="true"></span> Consulta Tickets
             </NavLink>
         </div>
        
